Aplico maquetado básico

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,9 @@
-<p>home works!</p>
-<app-git-hub-data></app-git-hub-data>
+<div id="home_container">
+    <div id="home_title">
+        Te damos la Bienvenida!
+    </div>
+
+    <div id="home_content">
+        <app-git-hub-data></app-git-hub-data>
+    </div>
+</div>
