--- a/src/app/componentes/nav-bar/nav-bar.component.html
+++ b/src/app/componentes/nav-bar/nav-bar.component.html
@@ -1,1 +1,11 @@
-<p>nav-bar works!</p>
+<p-menubar [model]="items">
+    <!-- <ng-template pTemplate="start">
+        <img src="assets/logos/main_logo.png" height="40" class="mr-2" />
+    </ng-template> -->
+
+    <ng-template pTemplate="end">
+        <!-- <div>{{this.servAuth.usuarioActual?.nombre}}</div> -->
+        <button *ngIf="servAuth.logueado.value" pButton label="Desloguear" icon="fas fa-sign-out-alt"
+            class="p-button-danger" iconPos="right" (click)="Desloguear()"></button>
+    </ng-template>
+</p-menubar>
